# spellcheck

./: Main.hs  spellcheck.cabal
Data/Spellcheck/: Distance.hs
lib/Data/: Spellcheck.hs
lib/Data/Spellcheck/: Datum.hs  Distance.hs  EditModel.hs  HolbrookCorpus.hs  LanguageModel.hs  Sentence.hs  SpellingResult.hs  UniformLanguageModel.hs  Utils.hs
tests/: HUnit.hs  Properties.hs
