name:                spellcheck
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag test-properties
  default: True
  manual: True

flag test-hunit
  default: True
  manual: True

library
  hs-source-dirs:      lib
  build-depends:       base       >=4.6     && <4.7,
                       text       >=0.11    && <1.2,
                       vector     >=0.10.9  && <0.10.10,
                       mtl        ==2.1.2,
                       conduit    >=1.0     && <1.1,
                       resourcet  >=0.4.3   && <0.5,
                       attoparsec >=0.11.1  && <0.11.2,
                       containers == 0.5.0.0

  exposed-modules:     Data.Spellcheck
                       Data.Spellcheck.Datum
                       Data.Spellcheck.Distance
                       Data.Spellcheck.HolbrookCorpus
                       Data.Spellcheck.Sentence
                       Data.Spellcheck.SpellingResult
                       Data.Spellcheck.UniformLanguageModel

  default-language:    Haskell2010

executable spellcheck
  main-is:             Main.hs
  build-depends:       base,
                       spellcheck
  ghc-options: -Wall -O2
  default-language:    Haskell2010

test-suite properties
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:
    tests
  if !flag(test-properties)
    buildable: False
  else
    build-depends:
      base,
      text,
      spellcheck,
      QuickCheck                 >=2.4,
      test-framework             >=0.6,
      test-framework-quickcheck2 >=0.2,
      test-framework-th          >=0.2

test-suite hunit
  type: exitcode-stdio-1.0
  main-is: HUnit.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  if !flag(test-hunit)
    buildable: False
  else
    build-depends:
      base,
      text,
      spellcheck,
      HUnit                >=1.2,
      test-framework       >=0.6,
      test-framework-hunit >=0.2,
      test-framework-th    >=0.2

  default-language:    Haskell2010